--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,24 +13,24 @@
     "@heroicons/react": "^2.2.0",
     "@stripe/stripe-js": "^2.1.0",
     "@tailwindcss/forms": "^0.5.9",
-    "autoprefixer": "^10.4.20",
     "axios": "^1.4.0",
     "firebase": "^10.3.0",
     "framer-motion": "^10.18.0",
     "next": "^15.0.3",
     "next-themes": "^0.4.3",
-    "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "socket.io-client": "^4.7.2",
-    "tailwindcss": "^3.4.15"
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/node": "^20.5.6",
     "@types/react": "^18.2.21",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.19",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.1.6"
   }
 }
