--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "socket.io-client": "^4.7.2"
   },
