--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev -p 3004",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -25,14 +27,20 @@
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.5.6",
     "@types/react": "^18.2.21",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.19",
     "firebase-admin": "^13.0.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.2.2"
   }
 }
