--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -25,12 +25,9 @@ yarn-error.log*
 # local env files
 .env*.local
 
+# vercel
+.vercel
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# credentials and sensitive files
-firebase-admin-key.json
-**/firebase-admin-key.json
-**/serviceAccountKey.json
-*.key.json
