--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@stripe/stripe-js": "^2.1.0",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.4.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "framer-motion": "^10.18.0",
     "next": "^15.0.3",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.0",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.5.6",
     "@types/react": "^18.2.21",
