--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^20.5.6",
     "@types/react": "^18.2.21",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.5",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.19",
     "firebase-admin": "^13.0.1",
@@ -43,6 +44,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
   }
 }
