--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.2.0",
     "@stripe/stripe-js": "^2.1.0",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.4.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
@@ -22,6 +23,7 @@
     "next": "^15.0.3",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
