--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@firebase/performance": "^0.6.11",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.2.0",
     "@stripe/stripe-js": "^2.1.0",
     "@tailwindcss/forms": "^0.5.9",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.4.0",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "framer-motion": "^10.18.0",
@@ -27,7 +29,10 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
-    "socket.io-client": "^4.7.2"
+    "rxjs": "^7.8.1",
+    "socket.io-client": "^4.7.2",
+    "tailwind-merge": "^2.5.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.0",
