--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "framer-motion": "^10.18.0",
-    "next": "^15.0.3",
+    "next": "14.1.0",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
     "react-datepicker": "^7.5.0",
