--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.6",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
@@ -25,6 +26,7 @@
     "next": "14.1.0",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
