--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -24,7 +24,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
-!.env.example
+.env
 
 # vercel
 .vercel
@@ -32,3 +32,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# firebase
+firebase-admin-key.json
+**/firebase-admin-key.json
+.firebase/
