--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "start": "next start -p 3004",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:network": "ts-node src/utils/tests/runTests.ts"
   },
   "dependencies": {
     "@firebase/performance": "^0.6.11",
