Add Stripe integration with products and pricing setup
- Added Stripe products configuration script
- Implemented subscription tiers (Expert Premium, Client Premium, Expert Basic, Client Basic)
- Added consultation service products
- Updated environment configuration for Stripe
- Added necessary Stripe API endpoints and services

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "@firebase/performance": "^0.6.11",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.2.0",
-    "@stripe/stripe-js": "^2.1.0",
+    "@stripe/firestore-stripe-payments": "^0.0.6",
+    "@stripe/stripe-js": "^2.4.0",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.4.0",
     "chart.js": "^4.4.6",
@@ -24,6 +26,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "framer-motion": "^10.18.0",
+    "js-cookie": "^3.0.5",
     "next": "14.1.0",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
@@ -34,6 +37,7 @@
     "react-icons": "^4.10.1",
     "rxjs": "^7.8.1",
     "socket.io-client": "^4.7.2",
+    "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
   },
