--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/firebase": "^2.4.32",
-    "dotenv": "^16.4.5",
     "firebase": "^11.0.2"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5",
+    "stripe": "^17.4.0"
   }
 }
